# flip_a_coin

./: .gitignore  CMakeLists.txt  README.md  flip_a_coin.aps  flip_a_coin.sln  flip_a_coin.vcxproj  flip_a_coin.vcxproj.filters  gif_play.cpp  gif_play.h  main.cpp  rc_for_cmake.rc  rc_for_msbuild.rc  resource.h
flip_a_coin/x64/Debug/: flip_a_coin.exe.recipe  flip_a_coin.ilk  flip_a_coin.res  vc143.idb
flip_a_coin/x64/Debug/flip_a_coin.tlog/: CL.command.1.tlog  CL.write.1.tlog  Cl.items.tlog  flip_a_coin.lastbuildstate  link.command.1.tlog  link.read.1.tlog  link.secondary.1.tlog  link.write.1.tlog  rc.command.1.tlog  rc.read.1.tlog  rc.write.1.tlog
flip_a_coin/x64/Release/: flip_a_coin.exe.recipe  flip_a_coin.iobj  flip_a_coin.ipdb  rc_for_msbuild.res
flip_a_coin/x64/Release/flip_a_coin.tlog/: CL.command.1.tlog  CL.read.1.tlog  CL.write.1.tlog  Cl.items.tlog  flip_a_coin.lastbuildstate  link.command.1.tlog  link.read.1.tlog  link.secondary.1.tlog  link.write.1.tlog  rc.command.1.tlog  rc.read.1.tlog  rc.write.1.tlog
rsc/design/: coin.aep  coin.psd
rsc/design/Adobe After Effects 自动保存/: coin自动保存 1.aep  coin自动保存 2.aep  coin自动保存 3.aep  coin自动保存 4.aep  coin自动保存 5.aep
